@@ -41,10 +41,6 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <libtorrent/session_status.hpp>
 #include <libtorrent/socket_io.hpp> // for read_*_endpoint
 
-#if TORRENT_USE_ASSERTS
-#include <boost/algorithm/cxx11/is_sorted.hpp> // for is_sorted
-#endif
-
 #include <boost/bind.hpp>
 
 namespace libtorrent { namespace dht
@@ -56,6 +52,24 @@ TORRENT_DEFINE_LOG(traversal)
 using detail::read_v4_endpoint;
 #if TORRENT_USE_IPV6
 using detail::read_v6_endpoint;
+#endif
+
+#if TORRENT_USE_ASSERTS
+template <class It, class Cmp>
+bool is_sorted(It b, It e, Cmp cmp)
+{
+	if (b == e) return true;
+
+	typename std::iterator_traits<It>::value_type v = *b;
+	++b;
+	while (b != e)
+	{
+		if (cmp(*b, v)) return false;
+		v = *b;
+		++b;
+	}
+	return true;
+}
 #endif
 
 observer_ptr traversal_algorithm::new_observer(void* ptr
@@ -122,7 +136,7 @@ void traversal_algorithm::add_entry(node_id const& id, udp::endpoint addr, unsig
 
 	o->flags |= flags;
 
-	TORRENT_ASSERT(boost::algorithm::is_sorted(m_results.begin(), m_results.end()
+	TORRENT_ASSERT(libtorrent::dht::is_sorted(m_results.begin(), m_results.end()
 		, boost::bind(
 			compare_ref
 			, boost::bind(&observer::id, _1)
@@ -181,7 +195,7 @@ void traversal_algorithm::add_entry(node_id const& id, udp::endpoint addr, unsig
 #endif
 		i = m_results.insert(i, o);
 
-		TORRENT_ASSERT(boost::algorithm::is_sorted(m_results.begin(), m_results.end()
+		TORRENT_ASSERT(libtorrent::dht::is_sorted(m_results.begin(), m_results.end()
 			, boost::bind(
 				compare_ref
 				, boost::bind(&observer::id, _1)
